test/org/midica/testfiles/failing/sk-unknown-cmd.midica
INCLUDE inc/instruments.midica

META
	composer	Beethoven
	
	SOFT_KARAOKE
		language   ENGL
		testcmd    Haydn
	END
END
